# new-wordpress-generator

./: .gitignore  Cargo.toml  deploy.sh  run.md  ssh.sh
src/: main.rs
templates/: .env  docker-compose.yml  nginx.conf  run.md
