[package]
name = "new-wordpress-generator"
version = "0.1.0"
authors = ["Max Fowler <maxhfowler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
tera = "1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"